--- a/config/config.json
+++ b/config/config.json
@@ -2,21 +2,21 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "burgers2_db",
+    "database": "sequelizeburger_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
     "password": null,
-    "database": "burgers2_db",
+    "database": "sequelizeburger_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
     "password": null,
-    "database": "burgers2_db",
+    "database": "sequelizeburger_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
