--- a/config/config.json
+++ b/config/config.json
@@ -15,7 +15,7 @@
   },
   "production": {
     "username": "w65s85frandhiqi1",
-    "password": "q09bco3m2xg7u1ei",
+    "password": "e45eylet9euv9my7",
     "database": "sequelizeburger_db",
     "host": "edo4plet5mhv93s3.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
